infra/k8s/ingestor/ingestor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestor-deployment
  labels:
    app: ingestor
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestor
  template:
    metadata:
      labels:
        app: ingestor
    spec:
      containers:
      - name: ingestor
        image: ghcr.io/majidmvulle/binance-trading-chart-service/ingestor:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 50051
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
