infra/k8s/ingestor/ingestor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingestor-service
  labels:
    app: ingestor
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: ingestor
  ports:
  - port: 50051
    targetPort: 50051
    protocol: TCP
    name: grpc
